extends Node



func _on_level_1_pressed():
	get_tree().change_scene_to_file("res://scenes/main.tscn")


func _on_level_2_pressed():
	get_tree().change_scene_to_file("res://scenes/level_2.tscn")


func _on_level_3_pressed():
	pass # Replace with function body.


func _on_level_4_pressed():
	pass # Replace with function body.


func _on_boss_pressed():
	pass # Replace with function body.
